added modals and carousels to projects

--- a/style.css
+++ b/style.css
@@ -323,6 +323,10 @@ header{
 	margin: 0 auto;
 }
 
+.about-me-text{
+	font-size: 1.3em;
+}
+
 @media (min-width: 800px){
 	.services{
 		display: flex;
@@ -551,3 +555,32 @@ header{
 	width: 9em;
 }
 
+.descriptions-container{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	margin-top: 10px;
+}
+
+.twitter-description{
+	width: 24em;
+	text-align: left;
+}
+
+.snake-description{
+	width: 24em;
+	text-align: left;
+}
+
+.facedetection-description{
+	width: 24em;
+	text-align: left;
+}
+
+.desc-title{
+	text-align: left;
+}
+
+.tech-title{
+	text-align: left;
+}
